--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ script:
 - bundle exec jekyll build 
 - htmlproofer --disable-external --allow-hash-href ./_site
 - html5validator --root _site/
-- yamale _data/code
+- yamale -s schemaOcs.yaml _data/code
+- yamale -s schemaOss.yaml _data/logiciels_libres-open_source_software
 
 sudo: false
