--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,13 @@ jdk:
 install:
 - bundle install 
 - pip install --user html5validator
+- pip install --user yamale
 
 script: 
 - bundle exec jekyll build 
 - htmlproofer --disable-external --allow-hash-href ./_site
 - html5validator --root _site/
+- yamale -s schemaOcs.yaml _data/code
+
 
 sudo: false
