add translations and add new field to schema

--- a/_config.yml
+++ b/_config.yml
@@ -386,7 +386,12 @@ DeprecatedStatus:
 RetiredStatus:
   en: Retired
   fr: Retraité
-  
+UsersOssName:
+  en: Users
+  fr: Utilisateurs
+UsersOssDesc:
+  en: The users who used the project.
+  fr: Les utilisateurs qui ont utilisés le projet.
 
 # Build settings
 markdown: kramdown
