--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
 - htmlproofer --disable-external --allow-hash-href ./_site
 - html5validator --root _site/
 - yamale -s schemaOcs.yaml _data/code
+- yamale -s schemaAdmin.yaml _data/administrations
 
 
 sudo: false
