--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ script:
 - html5validator --root _site/
 - yamale -s schemaOcs.yaml _data/code
 - yamale -s schemaAdmin.yaml _data/administrations
+- yamale -s schemaOss.yaml _data/logiciels_libres-open_source_software
 
 
 sudo: false
