use any(str(), null()): Validates an sring or a null value for the contact email field

--- a/_data/logiciels_libres-open_source_software/devex.yml
+++ b/_data/logiciels_libres-open_source_software/devex.yml
@@ -22,6 +22,7 @@ admininstrations:
       - 
         contact: 
           URL: https://github.com/canada-ca/devex/issues
+          email: ~
         name: 
           en: "GC Developer Exchange"
           fr: "Échange de développeurs du GC"
