--- a/_data/logiciels_libres-open_source_software/laravel.yml
+++ b/_data/logiciels_libres-open_source_software/laravel.yml
@@ -24,6 +24,7 @@ admininstrations:
       - 
         contact: 
           URL: https://www.international.gc.ca
+          email: ~
         name: 
           en: "Misc"
           fr: "Divers"
