--- a/_data/logiciels_libres-open_source_software/qgis.yml
+++ b/_data/logiciels_libres-open_source_software/qgis.yml
@@ -22,6 +22,7 @@ admininstrations:
       - 
         contact: 
           URL: reginald.maltais2@canada.ca
+          email: ~
         name: 
           en: ~
           fr: ~
