--- a/_data/logiciels_libres-open_source_software/mediawiki.yml
+++ b/_data/logiciels_libres-open_source_software/mediawiki.yml
@@ -24,6 +24,7 @@ admininstrations:
       - 
         contact: 
           URL: https://github.com/gctools-outilsgc/gcpedia/issues
+          email: ~
         name: 
           en: "GCpedia"
           fr: "GCpedia"
