--- a/_data/code/federal/cse-cst.yml
+++ b/_data/code/federal/cse-cst.yml
@@ -7,6 +7,7 @@ releases:
       URL: 
         en: https://github.com/CommunicationsSecurityEstablishment/spartacus/issues
         fr: https://github.com/CommunicationsSecurityEstablishment/spartacus/issues
+      email: media@cse-cst.gc.ca
     date: 
       created: "2016-02-28"
       metadataLastUpdated: "2019-01-31"
