--- a/_data/code/municipal/mtl_qc.yml
+++ b/_data/code/municipal/mtl_qc.yml
@@ -7,6 +7,7 @@ releases:
       URL: 
         en: https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues
         fr: https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues
+      email: julio.alcantara@ville.montreal.qc.ca
     date: 
       created: "2014-02-14"
       metadataLastUpdated: "2019-01-29"
