--- a/_data/code/municipal/edmonton_ab.yml
+++ b/_data/code/municipal/edmonton_ab.yml
@@ -7,6 +7,7 @@ releases:
       URL: 
         en: https://github.com/yeg-relief/youcanbenefit/issues
         fr: https://github.com/yeg-relief/youcanbenefit/issues
+      email: jaredrewerts@gmail.com
     date: 
       created: "2016-06-16"
       metadataLastUpdated: "2019-01-29"
