Start to fix build - update emails

--- a/_data/code/federal/eccc.yml
+++ b/_data/code/federal/eccc.yml
@@ -4,7 +4,7 @@ adminCode: eccc
 releases: 
   - 
     contact: 
-      email: metro@ec.gc.ca
+      email: metro-users@framalistes.org
     date: 
       created: "2006-08-28"
       metadataLastUpdated: "2019-01-31"
