--- a/_data/logiciels_libres-open_source_software/docker.yml
+++ b/_data/logiciels_libres-open_source_software/docker.yml
@@ -25,7 +25,7 @@ admininstrations:
     uses: 
       - 
         contact: 
-          email: "andrew.pitt@canada.ca"
+          email: ~
         name: 
           en: ~
           fr: ~
