--- a/_data/logiciels_libres-open_source_software/elgg.yml
+++ b/_data/logiciels_libres-open_source_software/elgg.yml
@@ -34,6 +34,7 @@ admininstrations:
       - 
         contact: 
           URL: "https://github.com/gctools-outilsgc/gcconnex/issues"
+          email: "ilia.salem@tbs-sct.gc.ca"
         name: 
           en: "GCconnex"
           fr: "GCconnex"
