Fix build 2 - remove devex (GCdevExchange)

--- a/_data/logiciels_libres-open_source_software/elgg.yml
+++ b/_data/logiciels_libres-open_source_software/elgg.yml
@@ -25,6 +25,7 @@ admininstrations:
       - 
         contact: 
           URL: "https://github.com/gctools-outilsgc/gcconnex/issues"
+          email: "ilia.salem@tbs-sct.gc.ca"
         name: 
           en: "GCcollab"
           fr: "GCcollab"
