--- a/_data/logiciels_libres-open_source_software/mediawiki.yml
+++ b/_data/logiciels_libres-open_source_software/mediawiki.yml
@@ -24,6 +24,7 @@ admininstrations:
       - 
         contact: 
           URL: https://github.com/gctools-outilsgc/gcpedia/issues
+          email: "ilia.salem@tbs-sct.gc.ca"
         name: 
           en: "GCpedia"
           fr: "GCpedia"
@@ -33,6 +34,7 @@ admininstrations:
       - 
         contact: 
           URL: https://github.com/gctools-outilsgc/gcpedia/issues
+          email: "ilia.salem@tbs-sct.gc.ca"
         name: 
           en: "GCcollab Wiki"
           fr: "Wiki GCcollab"
