--- a/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
+++ b/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
@@ -26,15 +26,6 @@ admininstrations:
       - 
         contact: 
           email: ~
-        description: 
-          en: "Desktop"
-          fr: "Poste de travail"
-        name: 
-          en: ~
-          fr: ~
-      - 
-        contact: 
-          email: ~
         name: 
           en: ~
           fr: ~
@@ -42,23 +33,12 @@ admininstrations:
           en: "APM data"
           fr: "Données du APM"
   - 
-    adminCode: csc-scc
-    uses: 
-      - 
-        contact: 
-          email: ~
-        description: 
-          en: "Development Environment"
-          fr: "Environnement de développement"
-        name: 
-          en: ~
-          fr: ~
-  - 
     adminCode: gac-amc
     uses: 
       - 
         contact: 
           URL: https://www.international.gc.ca/
+          email: sebastien.routier@international.gc.ca
         name: 
           en: "Available to all employees"
           fr: "Disponible pour tous les employés"
@@ -70,7 +50,7 @@ admininstrations:
     uses: 
       - 
         contact: 
-          email: desktop@tbs-sct.gc.ca
+          email: ~
         description: 
           en: "Must be requested"
           fr: "Doit être demandé"
@@ -84,8 +64,8 @@ admininstrations:
         contact: 
           email: ~
         name: 
-          en: ~
-          fr: ~
+          en: "Development Environment"
+          fr: "Environnement de développement"
         description: 
           en: "APM data"
           fr: "Données du APM"
