--- a/_data/logiciels_libres-open_source_software/firefox.yml
+++ b/_data/logiciels_libres-open_source_software/firefox.yml
@@ -21,23 +21,11 @@ tags:
     - Mobile
 admininstrations: 
   - 
-    adminCode: agr
-    uses: 
-      - 
-        contact: 
-          email: ""
-        name: 
-          en: "Available to developers"
-          fr: "Disponible pour les développeur"
-        description: 
-          en: ""
-          fr: ""
-  - 
     adminCode: pch
     uses: 
       - 
         contact: 
-          email: ""
+          email: "sebastien.lemay@canada.ca"
         name: 
           en: "Available to all employees (self service)"
           fr: "Disponible pour tous les employés (libre service)"
@@ -45,11 +33,23 @@ admininstrations:
           en: "Upgraded to latest ESR version every month."
           fr: "Mises à jours mensuelles à la dernière version ESR."
   - 
+    adminCode: agr
+    uses: 
+      - 
+        contact: 
+          email: ~
+        name: 
+          en: "Available to developers"
+          fr: "Disponible pour les développeur"
+        description: 
+          en: ""
+          fr: ""
+  - 
     adminCode: tbs-sct
     uses: 
       - 
         contact: 
-          email: ""
+          email: ~
         name: 
           en: "Available to all employees"
           fr: "Disponible pour tous les employés"
