--- a/_data/logiciels_libres-open_source_software/jekyll.yml
+++ b/_data/logiciels_libres-open_source_software/jekyll.yml
@@ -23,8 +23,7 @@ admininstrations:
         dateSince: 2018-01-23
         contact: 
           URL: https://github.com/canada-ca/ore-ero/issues
-          name: Sébastien Lemay
-          email: sebastien.lemay@tbs-sct.gc.ca
+          email: "sebastien.lemay@tbs-sct.gc.ca"
         name: 
           en: "Open Resource Exchange"
           fr: "Échange de ressources ouvert"
@@ -33,21 +32,5 @@ admininstrations:
           fr: "Pages Github"
         relatedCode:
           - "https://github.com/canada-ca/ore-ero"
-        users: 
-          - public
-      - 
-        dateSince: 2018-03-16
-        contact: 
-          URL: https://github.com/gc-blockchain/gc-blockchain.github.io/issues
-          name: Sébastien Lemay
-          email: sebastien.lemay@tbs-sct.gc.ca
-        name: 
-          en: "GC Blockchain Hackathon"
-          fr: "Hackathon Blockchain GC"
-        description: 
-          en: "Github Pages"
-          fr: "Pages Github"
-        relatedCode:
-          - "https://github.com/gc-blockchain/gc-blockchain.github.io"
         users: 
           - public
