--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 - bundle exec jekyll build 
 - htmlproofer --disable-external --allow-hash-href ./_site
 - html5validator --root _site/
-- yamale -s schemaOcs.yaml _data/code
+- yamale -s schemaCode.yaml _data/code
 - yamale -s schemaAdmin.yaml _data/administrations
 - yamale -s schemaOss.yaml _data/logiciels_libres-open_source_software
 
