Fix Yamale errors

--- a/_data/logiciels_libres-open_source_software/apache.yml
+++ b/_data/logiciels_libres-open_source_software/apache.yml
@@ -23,6 +23,9 @@ admininstrations:
         contact: 
           URL: https://www.international.gc.ca
           email: sebastien.routier@international.gc.ca
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: "Misc"
           fr: "Divers"
