--- a/_data/logiciels_libres-open_source_software/elasticsearch.yml
+++ b/_data/logiciels_libres-open_source_software/elasticsearch.yml
@@ -23,6 +23,9 @@ admininstrations:
         contact:
           name: "Irina Krasteleva"
           email: "irina.krasteleva@tc.gc.ca"
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: ~
           fr: ~
