--- a/_data/logiciels_libres-open_source_software/lesk.yml
+++ b/_data/logiciels_libres-open_source_software/lesk.yml
@@ -28,6 +28,9 @@ admininstrations:
           URL: https://www.international.gc.ca
           name: Terry O'Reilly
           email: terry.oreilly@international.gc.ca
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: "IMSC"
           fr: "IMSC"
@@ -39,6 +42,9 @@ admininstrations:
           URL: https://www.international.gc.ca
           name: Yves Cloutier
           email: yves.cloutier@international.gc.ca
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: "CART"
           fr: "CART"
