--- a/_data/logiciels_libres-open_source_software/drupal.yml
+++ b/_data/logiciels_libres-open_source_software/drupal.yml
@@ -22,6 +22,9 @@ admininstrations:
       - 
         contact: 
           email: webmaster@cse-cst.gc.ca
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: "CSE Website"
           fr: "Site Web du CST"
@@ -36,6 +39,9 @@ admininstrations:
       - 
         contact: 
           email: ~
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: "RCMP Website"
           fr: "Site Web de la GRC"
@@ -52,7 +58,9 @@ admininstrations:
           URL: "https://github.com/canada-ca/ore-ero/issues"
           email: christopher.jaja@tbs-sct.gc.ca
           name: "Christopher Jaja"
-        dateSince: 2018-01-23
+        date: 
+          started: "2018-01-23"
+          metadataLastUpdated: ~
         name: 
           en: "Open Government Portal"
           fr: "Portail du Gouvernement ouvert"
@@ -69,6 +77,9 @@ admininstrations:
       - 
         contact: 
           email: ~
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: "Buyandsell.gc.ca"
           fr: "Achatsetventes.gc.ca"
@@ -83,6 +94,9 @@ admininstrations:
       - 
         contact: 
           email: ~
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: ~
           fr: ~
@@ -95,6 +109,9 @@ admininstrations:
       - 
         contact: 
           email: ~
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: ~
           fr: ~
@@ -107,6 +124,9 @@ admininstrations:
       - 
         contact: 
           email: ~
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: ~
           fr: ~
@@ -119,6 +139,9 @@ admininstrations:
       - 
         contact: 
           email: ~
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: ~
           fr: ~
@@ -131,6 +154,9 @@ admininstrations:
       - 
         contact: 
           email: ~
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: ~
           fr: ~
@@ -143,6 +169,9 @@ admininstrations:
       - 
         contact:
           email: ~
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: ~
           fr: ~
@@ -156,6 +185,9 @@ admininstrations:
         contact:
           name: "Irina Krasteleva"
           email: "irina.krasteleva@tc.gc.ca"
+        date: 
+          started: ~
+          metadataLastUpdated: ~
         name: 
           en: ~
           fr: ~
