--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,15 @@
 {
   "parserOptions": {
-      "ecmaVersion": 2018
+    "ecmaVersion": 2018
   },
+  "plugins": ["prettier"],
   "env": {
-      "browser": true,
-      "es6": true
+    "browser": true,
+    "es6": true
   },
   "extends": "eslint:recommended",
   "rules": {
-      "no-console": "off"
+    "prettier/prettier": "error",
+    "no-console": "off"
   }
 }
