Added a lint task to CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
 - bundle install 
 - pip install --user html5validator
 - pip install --user yamale
+- npm install
 
 script: 
 - bundle exec jekyll build 
@@ -17,6 +18,7 @@ script:
 - yamale -s schemaCode.yaml _data/code
 - yamale -s schemaAdmin.yaml _data/administrations
 - yamale -s schemaOss.yaml _data/logiciels_libres-open_source_software
+- npm run lint
 
 
 sudo: false
