--- a/_data_templates/ll-oss_mandatory.yml
+++ b/_data_templates/ll-oss_mandatory.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 description: 
   en: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
   fr: "Quisque bibendum ante ligula, porta vestibulum enim egestas vel."
